2005-08-24  Nathaniel Smith  <njs@pobox.com>

	* file_io.hh
	({assert,require}_path_is_{nonexistent,file,directory}): New
	functions.
	Use them everywhere.

2005-08-24  Nathaniel Smith  <njs@pobox.com>

	* basic_io.hh: #include "paths.hh".
	* monotone.cc (add_rcfile): Remove obsolete absolutification, etc.

2005-08-24  Nathaniel Smith  <njs@pobox.com>

	* paths.hh (system_path): Add a from-any_path constructor.
	* Makefile.am (MOST_SOURCES): Remove path_component.{cc,hh}.
	* basic_io.hh (push_file_pair): New method.
	* change_set.cc (print_insane_change_set) 
	(print_insane_path_rearrangement): Use it.

2005-08-24  Nathaniel Smith  <njs@pobox.com>

	* paths.hh (any_path::as_internal): On second thought, return a
	std::string, not a utf8 -- utf8 would be better, but should wait
	for some more general charset handling cleanup.
	* Adjust other files accordingly.
	
2005-08-24  Nathaniel Smith  <njs@pobox.com>

	* More compile fixes.  All remaing compile errors are real
	problems, yay.
	
2005-08-24  Nathaniel Smith  <njs@pobox.com>

	* Lots and lots more compile fixes.

2005-08-24  Nathaniel Smith  <njs@pobox.com>

	* paths.hh, monotone.cc, app_state.hh, app_state.cc:
	* unix/inodeprint.cc: More compile fixes.

2005-08-24  Nathaniel Smith  <njs@pobox.com>

	* manifest.hh: Include paths.hh.
	* file_io.hh: Fix syntax errors, and fixup interface.

2005-08-24  Nathaniel Smith  <njs@pobox.com>

	* paths.hh, sanity.hh: Compilation fixes.

2005-08-24  Nathaniel Smith  <njs@pobox.com>

	* paths.cc: Update tests to use path_state_* and pass utf8
	objects.
	
2005-08-24  Nathaniel Smith  <njs@pobox.com>

	* paths.hh (file_path_external): Take a utf8() object, always.

2005-08-24  Nathaniel Smith  <njs@pobox.com>

	* paths.hh (class file_path): Make "convenience functions"
	required.

2005-08-24  Nathaniel Smith  <njs@pobox.com>

	* Switch rest of instances to using convenience functions.
	
2005-08-24  Nathaniel Smith  <njs@pobox.com>
	