@@ -2823,7 +2823,7 @@ print_insane_path_rearrangement(basic_io::printer & printer,
        i != pr.deleted_files.end(); ++i)
     {
       basic_io::stanza st;
-      st.push_str_pair(syms::delete_file, *i);
+      st.push_file_pair(syms::delete_file, *i);
       printer.print_stanza(st);
     }
 
@@ -2831,7 +2831,7 @@ print_insane_path_rearrangement(basic_io::printer & printer,
        i != pr.deleted_dirs.end(); ++i)
     {
       basic_io::stanza st;
-      st.push_str_pair(syms::delete_dir, *i);
+      st.push_file_pair(syms::delete_dir, *i);
       printer.print_stanza(st);
     }
 
@@ -2839,8 +2839,8 @@ print_insane_path_rearrangement(basic_io::printer & printer,
        i != pr.renamed_files.end(); ++i)
     {
       basic_io::stanza st;
-      st.push_str_pair(syms::rename_file, i->first);
-      st.push_str_pair(syms::to, i->second);
+      st.push_file_pair(syms::rename_file, i->first);
+      st.push_file_pair(syms::to, i->second);
       printer.print_stanza(st);
     }
 
